crates/pina_macros/src/snapshots/pina_macros__tests__account_basic.snap
---
source: crates/pina_macros/src/tests.rs
expression: output
---
#[repr(C)]
#[derive(
    ::pina::TypedBuilder,
    ::core::clone::Clone,
    ::core::marker::Copy,
    ::core::cmp::PartialEq,
    ::core::cmp::Eq,
    ::pina::Pod,
    ::pina::Zeroable
)]
#[builder(builder_method(vis = "", name = __builder))]
#[bytemuck(crate = "::pina::bytemuck")]
pub struct ConfigState {
    discriminator: [u8; MyAccount::BYTES],
    pub version: u8,
    pub bump: u8,
}
#[allow(dead_code)]
type ConfigStateBuilderType = ConfigStateBuilder<(([u8; MyAccount::BYTES],), (), ())>;
const __CONFIGSTATE_ALIGNMENT_ASSERTIONS__: () = {
    ::core::assert!(
        ::core::mem::align_of:: < [u8; MyAccount::BYTES] > () == 1,
        concat!("The alignment of field `", "discriminator", "` with type `",
        stringify!([u8; MyAccount::BYTES]),
        "` should be one. Consider using one of the exported `Pod*` types from the `pina` crate.")
    );
    ::core::assert!(
        ::core::mem::align_of:: < u8 > () == 1, concat!("The alignment of field `",
        "version", "` with type `", stringify!(u8),
        "` should be one. Consider using one of the exported `Pod*` types from the `pina` crate.")
    );
    ::core::assert!(
        ::core::mem::align_of:: < u8 > () == 1, concat!("The alignment of field `",
        "bump", "` with type `", stringify!(u8),
        "` should be one. Consider using one of the exported `Pod*` types from the `pina` crate.")
    );
    ::core::assert!(
        ::core::mem::align_of:: < ConfigState > () == 1,
        concat!("The alignment of struct `", stringify!(ConfigState),
        "` should be one so it can be used for zero-copy Pod casts.")
    );
    ::core::assert!(
        ::core::mem::size_of:: < ConfigState > () == (0usize + ::core::mem::size_of:: <
        [u8; MyAccount::BYTES] > () + ::core::mem::size_of:: < u8 > () +
        ::core::mem::size_of:: < u8 > ()), concat!("`", stringify!(ConfigState),
        "` layout is padded. `#[pina]` discriminator-first POD layouts must be tightly packed.")
    );
};
impl ConfigState {
    /// Zero out all bytes after the discriminator, preserving it. This can be useful when closing an account.
    #[allow(unsafe_code)]
    pub fn zeroed(&mut self) {
        unsafe {
            ::core::ptr::write_bytes(
                (self as *mut Self as *mut u8).add(MyAccount::BYTES),
                0,
                ::core::mem::size_of::<Self>() - MyAccount::BYTES,
            );
        }
    }
    pub fn to_bytes(&self) -> &[u8] {
        ::pina::bytemuck::bytes_of(self)
    }
    pub fn builder() -> ConfigStateBuilderType {
        let mut bytes = [0u8; MyAccount::BYTES];
        <Self as ::pina::HasDiscriminator>::VALUE.write_discriminator(&mut bytes);
        Self::__builder().discriminator(bytes)
    }
}
impl ::pina::HasDiscriminator for ConfigState {
    type Type = MyAccount;
    const VALUE: Self::Type = MyAccount::ConfigState;
}
impl ::pina::AccountValidation for ConfigState {
    #[track_caller]
    fn assert<F>(&self, condition: F) -> Result<&Self, ::pina::ProgramError>
    where
        F: Fn(&Self) -> bool,
    {
        if condition(self) {
            return Ok(self);
        }
        ::pina::log!("Account is invalid");
        ::pina::log_caller();
        Err(::pina::ProgramError::InvalidAccountData)
    }
    #[track_caller]
    fn assert_msg<F>(
        &self,
        condition: F,
        msg: &str,
    ) -> Result<&Self, ::pina::ProgramError>
    where
        F: Fn(&Self) -> bool,
    {
        match ::pina::assert(
            condition(self),
            ::pina::ProgramError::InvalidAccountData,
            msg,
        ) {
            Err(err) => Err(err),
            Ok(()) => Ok(self),
        }
    }
    #[track_caller]
    fn assert_mut<F>(&mut self, condition: F) -> Result<&mut Self, ::pina::ProgramError>
    where
        F: Fn(&Self) -> bool,
    {
        if condition(self) {
            return Ok(self);
        }
        ::pina::log!("Account is invalid");
        ::pina::log_caller();
        Err(::pina::ProgramError::InvalidAccountData)
    }
    #[track_caller]
    fn assert_mut_msg<F>(
        &mut self,
        condition: F,
        msg: &str,
    ) -> Result<&mut Self, ::pina::ProgramError>
    where
        F: Fn(&Self) -> bool,
    {
        match ::pina::assert(
            condition(self),
            ::pina::ProgramError::InvalidAccountData,
            msg,
        ) {
            Err(err) => Err(err),
            Ok(()) => Ok(self),
        }
    }
}
