crates/pina_macros/src/snapshots/pina_macros__tests__account_with_path_variant.snap
---
source: crates/pina_macros/src/tests.rs
expression: output
---
#[repr(C)]
#[derive(
    ::pina::TypedBuilder,
    ::core::clone::Clone,
    ::core::marker::Copy,
    ::core::cmp::PartialEq,
    ::core::cmp::Eq
)]
#[builder(builder_method(vis = "", name = __builder))]
pub struct MyStruct {
    discriminator: [u8; AcctDisc::BYTES],
    pub value: u8,
}
#[allow(dead_code)]
type MyStructBuilderType = MyStructBuilder<(([u8; AcctDisc::BYTES],), ())>;
const __MYSTRUCT_ALIGNMENT_ASSERTIONS__: () = {
    ::core::assert!(
        ::core::mem::align_of:: < [u8; AcctDisc::BYTES] > () == 1,
        concat!("The alignment of field `", "discriminator", "` with type `",
        stringify!([u8; AcctDisc::BYTES]),
        "` should be one. Consider using one of the exported `Pod*` types from the `pina` crate.")
    );
    ::core::assert!(
        ::core::mem::align_of:: < u8 > () == 1, concat!("The alignment of field `",
        "value", "` with type `", stringify!(u8),
        "` should be one. Consider using one of the exported `Pod*` types from the `pina` crate.")
    );
    ::core::assert!(
        ::core::mem::align_of:: < MyStruct > () == 1,
        concat!("The alignment of struct `", stringify!(MyStruct),
        "` should be one so it can be used for zero-copy casts.")
    );
    ::core::assert!(
        ::core::mem::size_of:: < MyStruct > () == (0usize + ::core::mem::size_of:: < [u8;
        AcctDisc::BYTES] > () + ::core::mem::size_of:: < u8 > ()), concat!("`",
        stringify!(MyStruct),
        "` layout is padded. `#[pina]` discriminator-first zero-copy layouts must be tightly packed.")
    );
};
impl MyStruct {
    /// Zero out all bytes in the struct including padding bytes. This can be useful when closing an account.
    #[allow(unsafe_code)]
    pub fn zeroed(&mut self) {
        unsafe { ::core::ptr::write_bytes(self as *mut Self, 0, 1) }
    }
    /// Returns a deterministic, fully initialized byte representation.
    pub fn to_bytes(&self) -> <Self as ::pina::PinaToBytes>::Bytes {
        <Self as ::pina::PinaToBytes>::to_bytes(self)
    }
    pub fn builder() -> MyStructBuilderType {
        let mut bytes = [0u8; AcctDisc::BYTES];
        <Self as ::pina::HasDiscriminator>::VALUE.write_discriminator(&mut bytes);
        Self::__builder().discriminator(bytes)
    }
}
impl ::pina::HasDiscriminator for MyStruct {
    type Type = AcctDisc;
    const VALUE: Self::Type = AcctDisc::Custom;
}
impl ::pina::AccountValidation for MyStruct {
    #[track_caller]
    fn assert<F>(&self, condition: F) -> Result<&Self, ::pina::ProgramError>
    where
        F: Fn(&Self) -> bool,
    {
        if condition(self) {
            return Ok(self);
        }
        ::pina::log!("Account is invalid");
        ::pina::log_caller();
        Err(::pina::ProgramError::InvalidAccountData)
    }
    #[track_caller]
    fn assert_msg<F>(
        &self,
        condition: F,
        msg: &str,
    ) -> Result<&Self, ::pina::ProgramError>
    where
        F: Fn(&Self) -> bool,
    {
        match ::pina::assert(
            condition(self),
            ::pina::ProgramError::InvalidAccountData,
            msg,
        ) {
            Err(err) => Err(err),
            Ok(()) => Ok(self),
        }
    }
    #[track_caller]
    fn assert_mut<F>(&mut self, condition: F) -> Result<&mut Self, ::pina::ProgramError>
    where
        F: Fn(&Self) -> bool,
    {
        if condition(self) {
            return Ok(self);
        }
        ::pina::log!("Account is invalid");
        ::pina::log_caller();
        Err(::pina::ProgramError::InvalidAccountData)
    }
    #[track_caller]
    fn assert_mut_msg<F>(
        &mut self,
        condition: F,
        msg: &str,
    ) -> Result<&mut Self, ::pina::ProgramError>
    where
        F: Fn(&Self) -> bool,
    {
        match ::pina::assert(
            condition(self),
            ::pina::ProgramError::InvalidAccountData,
            msg,
        ) {
            Err(err) => Err(err),
            Ok(()) => Ok(self),
        }
    }
}
const _: fn() = || {
    fn assert_zc_elem<T: ::pina::ZcElem>() {}
    assert_zc_elem::<[u8; AcctDisc::BYTES]>();
    assert_zc_elem::<u8>();
};
impl ::pina::PinaSerialize for MyStruct {
    fn write_bytes(&self, output: &mut [u8]) {
        ::core::assert!(output.len() == ::core::mem::size_of:: < Self > ());
        output.fill(0);
        let mut offset = 0usize;
        let field_size = ::core::mem::size_of::<[u8; AcctDisc::BYTES]>();
        <[u8; AcctDisc::BYTES] as ::pina::PinaSerialize>::write_bytes(
            &self.discriminator,
            &mut output[offset..offset + field_size],
        );
        offset += field_size;
        let field_size = ::core::mem::size_of::<u8>();
        <u8 as ::pina::PinaSerialize>::write_bytes(
            &self.value,
            &mut output[offset..offset + field_size],
        );
        offset += field_size;
        ::core::debug_assert!(offset == output.len());
    }
}
impl ::pina::PinaToBytes for MyStruct {
    type Bytes = [u8; ::core::mem::size_of::<MyStruct>()];
    fn zeroed_bytes() -> Self::Bytes {
        [0u8; ::core::mem::size_of::<MyStruct>()]
    }
}
impl ::pina::ZcValidate for MyStruct {
    fn validate_ref(value: &Self) -> Result<(), ::pina::ZeroPodError> {
        <[u8; AcctDisc::BYTES] as ::pina::ZcValidate>::validate_ref(
            &value.discriminator,
        )?;
        <u8 as ::pina::ZcValidate>::validate_ref(&value.value)?;
        Ok(())
    }
}
#[allow(unsafe_code)]
unsafe impl ::pina::ZcElem for MyStruct {}
impl ::pina::ZeroPodSchema for MyStruct {
    const LAYOUT: ::pina::LayoutKind = ::pina::LayoutKind::Fixed;
}
impl ::pina::ZeroPodFixed for MyStruct {
    type Zc = MyStruct;
    const SIZE: usize = ::core::mem::size_of::<MyStruct>();
    fn from_bytes(data: &[u8]) -> Result<&Self::Zc, ::pina::ZeroPodError> {
        <Self as ::pina::ZeroPodFixed>::validate(data)?;
        Ok(unsafe { &*(data.as_ptr() as *const Self::Zc) })
    }
    fn from_bytes_mut(data: &mut [u8]) -> Result<&mut Self::Zc, ::pina::ZeroPodError> {
        <Self as ::pina::ZeroPodFixed>::validate(data)?;
        Ok(unsafe { &mut *(data.as_mut_ptr() as *mut Self::Zc) })
    }
    fn validate(data: &[u8]) -> Result<(), ::pina::ZeroPodError> {
        if data.len() < Self::SIZE {
            return Err(::pina::ZeroPodError::BufferTooSmall);
        }
        let zc = unsafe { &*(data.as_ptr() as *const Self::Zc) };
        <Self::Zc as ::pina::ZcValidate>::validate_ref(zc)?;
        Ok(())
    }
    unsafe fn from_bytes_unchecked(data: &[u8]) -> &Self::Zc {
        &*(data.as_ptr() as *const Self::Zc)
    }
    unsafe fn from_bytes_mut_unchecked(data: &mut [u8]) -> &mut Self::Zc {
        &mut *(data.as_mut_ptr() as *mut Self::Zc)
    }
}
impl ::pina::ZcField for MyStruct {
    type Pod = MyStruct;
    const POD_SIZE: usize = ::core::mem::size_of::<MyStruct>();
}
impl ::pina::PinaAccount for MyStruct {
    fn validate(data: &[u8]) -> Result<(), ::pina::ProgramError> {
        if !<Self as ::pina::HasDiscriminator>::matches_discriminator(data) {
            return Err(::pina::ProgramError::InvalidAccountData);
        }
        <Self as ::pina::ZeroPodFixed>::validate(data)
            .map_err(|_| ::pina::ProgramError::InvalidAccountData)
    }
    fn try_from_bytes(data: &[u8]) -> Result<&Self, ::pina::ProgramError> {
        <Self as ::pina::PinaAccount>::validate(data)?;
        if data.len() != ::core::mem::size_of::<Self>() {
            return Err(::pina::ProgramError::InvalidAccountData);
        }
        <Self as ::pina::ZeroPodFixed>::from_bytes(data)
            .map_err(|_| ::pina::ProgramError::InvalidAccountData)
    }
    fn try_from_bytes_mut(data: &mut [u8]) -> Result<&mut Self, ::pina::ProgramError> {
        <Self as ::pina::PinaAccount>::validate(data)?;
        if data.len() != ::core::mem::size_of::<Self>() {
            return Err(::pina::ProgramError::InvalidAccountData);
        }
        <Self as ::pina::ZeroPodFixed>::from_bytes_mut(data)
            .map_err(|_| ::pina::ProgramError::InvalidAccountData)
    }
}
