crates/pina_macros/src/snapshots/pina_macros__tests__account_with_pod_types.snap
---
source: crates/pina_macros/src/tests.rs
expression: output
---
#[derive(::pina::zeropod::ZeroPod)]
pub struct BalanceAccount {
    discriminator: [u8; MyDiscriminator::BYTES],
    pub owner: [u8; 32],
    pub amount: PodU64,
    pub decimals: u8,
    pub is_frozen: PodBool,
}
impl BalanceAccount {
    /// The exact number of bytes required by the zeropod representation.
    pub const SIZE: usize = <Self as ::pina::ZeroPodFixed>::SIZE;
    /// Validate `data` and return zeropod's immutable zero-copy companion.
    pub fn try_from_bytes(
        data: &[u8],
    ) -> Result<&<Self as ::pina::ZeroPodFixed>::Zc, ::pina::ProgramError> {
        if data.len() != Self::SIZE
            || !<Self as ::pina::HasDiscriminator>::matches_discriminator(data)
        {
            return Err(::pina::ProgramError::InvalidAccountData);
        }
        <Self as ::pina::ZeroPodFixed>::from_bytes(data)
            .map_err(|_| ::pina::ProgramError::InvalidAccountData)
    }
    /// Initialize caller-owned storage and return its mutable zero-copy view.
    ///
    /// The complete slice is initialized before zeropod validates it. The
    /// returned borrow prevents the caller from observing or changing the raw
    /// bytes while the typed view is live.
    pub fn initialize(
        data: &mut [u8],
    ) -> Result<&mut <Self as ::pina::ZeroPodFixed>::Zc, ::pina::ProgramError> {
        if data.len() != Self::SIZE {
            return Err(::pina::ProgramError::InvalidAccountData);
        }
        data.fill(0);
        <Self as ::pina::HasDiscriminator>::write_discriminator(data);
        <Self as ::pina::ZeroPodFixed>::from_bytes_mut(data)
            .map_err(|_| ::pina::ProgramError::InvalidAccountData)
    }
}
impl ::pina::HasDiscriminator for BalanceAccount {
    type Type = MyDiscriminator;
    const VALUE: Self::Type = MyDiscriminator::BalanceAccount;
}
impl ::pina::AccountValidation for BalanceAccountZc {
    #[track_caller]
    fn assert<F>(&self, condition: F) -> Result<&Self, ::pina::ProgramError>
    where
        F: Fn(&Self) -> bool,
    {
        if condition(self) {
            return Ok(self);
        }
        ::pina::log!("Account is invalid");
        ::pina::log_caller();
        Err(::pina::ProgramError::InvalidAccountData)
    }
    #[track_caller]
    fn assert_msg<F>(
        &self,
        condition: F,
        msg: &str,
    ) -> Result<&Self, ::pina::ProgramError>
    where
        F: Fn(&Self) -> bool,
    {
        match ::pina::assert(
            condition(self),
            ::pina::ProgramError::InvalidAccountData,
            msg,
        ) {
            Err(err) => Err(err),
            Ok(()) => Ok(self),
        }
    }
    #[track_caller]
    fn assert_mut<F>(&mut self, condition: F) -> Result<&mut Self, ::pina::ProgramError>
    where
        F: Fn(&Self) -> bool,
    {
        if condition(self) {
            return Ok(self);
        }
        ::pina::log!("Account is invalid");
        ::pina::log_caller();
        Err(::pina::ProgramError::InvalidAccountData)
    }
    #[track_caller]
    fn assert_mut_msg<F>(
        &mut self,
        condition: F,
        msg: &str,
    ) -> Result<&mut Self, ::pina::ProgramError>
    where
        F: Fn(&Self) -> bool,
    {
        match ::pina::assert(
            condition(self),
            ::pina::ProgramError::InvalidAccountData,
            msg,
        ) {
            Err(err) => Err(err),
            Ok(()) => Ok(self),
        }
    }
}
impl ::pina::PinaAccount for BalanceAccount {}
