crates/pina_macros/src/snapshots/pina_macros__tests__accounts_derive_default_crate.snap
---
source: crates/pina_macros/src/tests.rs
expression: output
---
impl<'a> ::pina::ParseAccounts<'a> for DefaultCrateAccounts<'a> {
    fn parse_accounts(
        cursor: &mut ::pina::AccountsCursor<'a>,
    ) -> ::core::result::Result<Self, ::pina::ProgramError> {
        let authority = cursor.next()?;
        let data = cursor.next()?;
        Ok(Self { authority, data })
    }
}
impl<'a> ::pina::TryFromAccountInfos<'a> for DefaultCrateAccounts<'a> {
    fn try_from_account_infos(
        program_id: &::pina::Address,
        accounts: &'a mut [::pina::AccountView],
    ) -> ::core::result::Result<Self, ::pina::ProgramError> {
        let mut cursor = ::pina::AccountsCursor::new(*program_id, accounts);
        let parsed = <Self as ::pina::ParseAccounts>::parse_accounts(&mut cursor)?;
        cursor.finish_exact()?;
        Ok(parsed)
    }
}
impl<'a> ::core::convert::TryFrom<(&'a ::pina::Address, &'a mut [::pina::AccountView])>
for DefaultCrateAccounts<'a> {
    type Error = ::pina::ProgramError;
    fn try_from(
        (program_id, accounts): (&'a ::pina::Address, &'a mut [::pina::AccountView]),
    ) -> ::core::result::Result<Self, Self::Error> {
        <Self as ::pina::TryFromAccountInfos>::try_from_account_infos(
            program_id,
            accounts,
        )
    }
}
