crates/pina_macros/src/snapshots/pina_macros__tests__accounts_derive_many_fields.snap
---
source: crates/pina_macros/src/tests.rs
expression: output
---
impl<'a> ::pina::ParseAccounts<'a> for EscrowAccounts<'a> {
    fn parse_accounts(
        cursor: &mut ::pina::AccountsCursor<'a>,
    ) -> ::core::result::Result<Self, ::pina::ProgramError> {
        let maker = cursor.next()?;
        let escrow = cursor.next()?;
        let mint_a = cursor.next()?;
        let mint_b = cursor.next()?;
        let maker_ata_a = cursor.next()?;
        let vault = cursor.next()?;
        let token_program = cursor.next()?;
        let associated_token_program = cursor.next()?;
        let system_program = cursor.next()?;
        Ok(Self {
            maker,
            escrow,
            mint_a,
            mint_b,
            maker_ata_a,
            vault,
            token_program,
            associated_token_program,
            system_program,
        })
    }
}
impl<'a> ::pina::TryFromAccountInfos<'a> for EscrowAccounts<'a> {
    fn try_from_account_infos(
        program_id: &::pina::Address,
        accounts: &'a mut [::pina::AccountView],
    ) -> ::core::result::Result<Self, ::pina::ProgramError> {
        let mut cursor = ::pina::AccountsCursor::new(*program_id, accounts);
        let parsed = <Self as ::pina::ParseAccounts>::parse_accounts(&mut cursor)?;
        cursor.finish_exact()?;
        Ok(parsed)
    }
}
impl<'a> ::core::convert::TryFrom<(&'a ::pina::Address, &'a mut [::pina::AccountView])>
for EscrowAccounts<'a> {
    type Error = ::pina::ProgramError;
    fn try_from(
        (program_id, accounts): (&'a ::pina::Address, &'a mut [::pina::AccountView]),
    ) -> ::core::result::Result<Self, Self::Error> {
        <Self as ::pina::TryFromAccountInfos>::try_from_account_infos(
            program_id,
            accounts,
        )
    }
}
