crates/pina_macros/src/snapshots/pina_macros__tests__accounts_derive_rejects_option_of_non_reference.snap
---
source: crates/pina_macros/src/tests.rs
expression: output
---
::core::compile_error! {
    "only `Option<&AccountView>` and `Option<&mut AccountView>` fields are supported"
}
