crates/pina_macros/src/snapshots/pina_macros__tests__accounts_derive_rejects_option_without_type_argument.snap
---
source: crates/pina_macros/src/tests.rs
expression: output
---
::core::compile_error! {
    "`Option` account fields require explicit type arguments, e.g. `Option<&AccountView>`"
}
